# seth

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
src/: net.cpp  net.h
